--- a/finance/rent-calculator.html
+++ b/finance/rent-calculator.html
@@ -497,9 +497,9 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h3>Similar Calculators</h3>
       <div class="similar-calculators">
-        <a href="/finance/cd-calculator.html">CD Calculator</a>
-        <a href="/finance/vat-calculator.html">VAT Calculator</a>
-        <a href="/finance/sales-tax-calculator.html">Sales Tax Calculator</a>
+        <a href="/finance/cd-calculator">CD Calculator</a>
+        <a href="/finance/vat-calculator">VAT Calculator</a>
+        <a href="/finance/sales-tax-calculator">Sales Tax Calculator</a>
       </div>
     </div>
 <div class="description-txt">
