--- a/index.html
+++ b/index.html
@@ -292,9 +292,8 @@ CGPA calculation made easy and straightforward for Nigerian students, helping th
   </footer>
   
   <script src="/assets/js/many-func.js" defer crossorigin="anonymous"></script>
- <!-- <script src="/assets/js/search.js"></script>-->
-  <!--<script src="/assets/js/header-functions.js"></script>-->
-<script src="/assets/js/index.js"></script>
+
+<script src="/assets/js/index.js" defer crossorigin="anonymous"></script>
 <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
 </body>
 
