--- a/education/cgpa-calculator-nigeria.html
+++ b/education/cgpa-calculator-nigeria.html
@@ -226,7 +226,7 @@ Clear all changes
       <div class="similar-calculators">
         <a href="/math/foil-calculator.html">Foil Calculator</a>
         <a href="/finance/custom-duty-calculator-for-vehicles-nigeria.html">Custom Duty Calculator</a>
-        <a href="/math/basic-calculator.html">Basic Calculator</a>
+        <a href="/finance/nigeria-personal-income-tax-calculator.html">PIT Calculator Nigeria</a>
       </div>
     </div>
 <div class="description-txt">
@@ -373,6 +373,7 @@ fill: #55606c;
   border-radius: 30px;
   padding: 10px;
   color: #464BFF;
+  font-family: lexend;
 }
   .course-row button.delete-course {
     padding: 10px;
@@ -404,7 +405,7 @@ fill: #55606c;
             border-radius: 8px;
             outline: none;
             transition: .1s;
-            font-family: "OfficeCode";
+            font-family: "young";
             background: #fff;
             flex-basis: 90%;
         }
