--- a/404.html
+++ b/404.html
@@ -6,50 +6,8 @@
   <meta name="theme-color" content="#464BFF"/>
 
 <title>404 - Page Not Found</title>
-<link rel="manifest" href="/assets/manifest.json">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="Calclulo">
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 <link rel="stylesheet" href="/assets/css/search.css" />
-<link rel="stylesheet" href="/assets/css/cookie.css" />
-<link rel="stylesheet" href="/assets/css/share-global.css" />
-
-<meta name="title" content="Herbicide Dosage Calculator | IITA Free Tool for Farmers & Agronomists">
-<meta name="description" content="Herbicide Dosage Calculator by IITA. Calculate correct herbicide rates for farms, fields, and gardens. Ideal for farmers, agronomists, extension workers, and researchers.">
-
-<meta name="calclulo" content="IITA - International Institute of Tropical Agriculture">
-<meta name="robots" content="index, follow">
-<link rel="canonical" href="https://calclulo.com/agriculture/herbicide-calculator">
-
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://calclulo.com/agriculture/herbicide-calculator">
-<meta property="og:title" content="Free Herbicide Dosage Calculator | IITA Accurate Weed Control Tool">
-<meta property="og:description" content="IITA's free Herbicide Dosage Calculator ensures correct application rates for herbicides, supporting sustainable weed management for farmers, agronomists, and agricultural experts.">
-<meta property="og:image" content="https://calclulo.com/assets/images/herbicide-calculator-thumbnail.png">
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/agriculture/herbicide-calculator">
-<meta name="twitter:title" content="Herbicide Dosage Calculator by IITA | Precise Weed Control">
-<meta name="twitter:description" content="Determine accurate herbicide dosages with IITA's free calculator. Trusted by farmers, agronomists, and researchers for effective and responsible weed management.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/herbicide-calculator-thumbnail.png">
-
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
-
-<script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebPage",
-    "name": "Herbicide calculator ",
-    "url": "https://calclulo.com/agriculture/herbicide-calculator",
-    "description": "Calculate accurate herbicide dosages for your crops with this free IITA tool. Designed for farmers, agronomists, and researchers to promote safe and effective weed control.",
-    "inLanguage": "en",
-    "publisher": {
-      "@type": "Organization",
-      "name": "Calclulo",
-      "url": "https://calclulo.com"
-    }
-  }
-</script>
 </head>
 
 <body id="four-o-four-body">
@@ -180,13 +138,18 @@ Everyday Life
  </nav>
  
  <div class="four-o-four-container">
-   <h1>404</h1>
+   <!--<h1>404</h1>-->
    <img src="/assets/images/Thinking-404.svg" alt="404 image" />
-   <p>Oops! Looks like this page drifted <br /> away.</p>
-   <a href="/index.html">Take me home <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none">
-  <path d="M7.4 10C7.4 10 10.9637 10 15.65 10M15.65 10L10.4 5M15.65 10L10.4 15" stroke="#fff" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" />
-  <path d="M4.9 10L4.4 10" stroke="#fff" stroke-width="1.8" stroke-linecap="round" />
-</svg></a>
+   <h3><span style="color: #464BFF;">Oops!</span> Looks <br /> like this page drifted <br /> away.</h3>
+  <div class="description-four-o-four">
+   <p>Please check back later or head over to our homepage.</p>
+   <p>Thanks for your patience!</p>
+  </div>
+  
+   <a href="/index.html"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none">
+  <path d="M7.4 10C7.4 10 10.9637 10 15.65 10M15.65 10L10.4 5M15.65 10L10.4 15" stroke="#464BFF" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" />
+  <path d="M4.9 10L4.4 10" stroke="#464BFF" stroke-width="1.8" stroke-linecap="round" />
+</svg>Take me home</a>
    
  </div>
   
@@ -217,57 +180,68 @@ min-height: 100vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 30%;
   
   }
-  .four-o-four-container h1{
+  .four-o-four-container h3{
     font-weight: 900;
     font-family: lexend;
-    font-size: 4em;
+    font-size: 1.5em;
     margin-bottom: -5px;
     letter-spacing: .5px;
+    text-align: center;
+    
   }
   .four-o-four-container img{
-    width: 80%;
+    width: 75%;
     max-width: 400px;
   }
+  .description-four-o-four{
+    
+  }
+.four-o-four-container p:nth-child(1){
+  margin-bottom: -10px;
+}
   .four-o-four-container p{
 font-weight: 400;
 font-family: young;
 color: #575865;
 font-size: 16px;
 text-align: center;
+letter-spacing: .2px;
+line-height: 1.5;
 }
 .four-o-four-container a{
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
-    background: #464BFF;
-    color: #fff;
+    background: transparent;
+    color: #464BFF;
    padding: 15px;
    padding-left: 25px;
    padding-right: 25px;
   border-radius: 30px;
  cursor: help;
 text-decoration: none;
-font-family: young;
+font-family: lexend;
 font-weight: 400;
 letter-spacing: .5px;
 font-size: 1em;
 transition: .2s;
-box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+
   }
   .four-o-four-container a:hover{
-    background: #3034CC;
+    color: #3034CC;
   }
   .four-o-four-container a:active{
     transform: translateY(-3px);
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 10px 0px, rgba(0, 0, 0, 0.07) 0px 1px 2px 0px;
   }
   .four-o-four-container a svg{
     fill: #fff;
     height: 20px;
     width: 20px;
+  transform: scaleX(-1);
   }
 </style>
 
