--- a/ecology.html
+++ b/ecology.html
@@ -10,6 +10,9 @@
 <link rel="stylesheet" href="/assets/css/search.css" />
 <link rel="stylesheet" href="/assets/css/cookie.css" />
 <link rel="stylesheet" href="/assets/css/share-global.css" />
+<link rel="manifest" href="/assets/manifest.json">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="Calclulo">
 
 <meta name="title" content="Free Ecology Calculators for Sustainability and Environment">
 <meta name="description" content="Access a powerful set of free ecology calculators. Instantly calculate carbon footprint, emissions, energy use, water consumption, and more.">
@@ -213,7 +216,8 @@ Everyday Life
   <script src="/assets/js/many-func.js" defer crossorigin="anonymous"></script>
   <script src="/assets/js/search.js"></script>
   <script src="/assets/js/header-functions.js"></script>
-  <script src="/assets/js/share-global.js"></script>
+  <script src="/assets/js/share-global.js" defer crossorigin="anonymous"></script>
+  <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
 </body>
 
 </html>
