--- a/everyday-life.html
+++ b/everyday-life.html
@@ -10,6 +10,9 @@
 <link rel="stylesheet" href="/assets/css/search.css" />
 <link rel="stylesheet" href="/assets/css/cookie.css" />
 <link rel="stylesheet" href="/assets/css/share-global.css" />
+<link rel="manifest" href="/assets/manifest.json">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="Calclulo">
 
 <meta name="title" content="Free Everyday Life Tools for Home, Work & Daily Tasks">
 <meta name="description" content="Access a collection of free Everyday Life tools. Calculate expenses, plan tasks, track daily needs, and more — perfect for families, individuals, and everyday use.">
@@ -230,7 +233,8 @@ Everyday Life
   <script src="/assets/js/many-func.js" defer crossorigin="anonymous"></script>
   <script src="/assets/js/search.js"></script>
   <script src="/assets/js/header-functions.js"></script>
-  <script src="/assets/js/share-global.js"></script>
+  <script src="/assets/js/share-global.js" defer crossorigin="anonymous"></script>
+  <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
 </body>
 
 </html>
