--- a/conversion.html
+++ b/conversion.html
@@ -10,6 +10,9 @@
 <link rel="stylesheet" href="/assets/css/search.css" />
 <link rel="stylesheet" href="/assets/css/cookie.css" />
 <link rel="stylesheet" href="/assets/css/share-global.css" />
+<link rel="manifest" href="/assets/manifest.json">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="Calclulo">
 
 <meta name="title" content="Free Conversion Calculators for Everyday Use">
 <meta name="description" content="Access a powerful set of free conversion calculators. Instantly convert units like length, weight, volume, temperature, data, and more with ease.">
@@ -212,7 +215,8 @@ Everyday Life
   <script src="/assets/js/many-func.js" defer crossorigin="anonymous"></script>
   <script src="/assets/js/search.js"></script>
   <script src="/assets/js/header-functions.js"></script>
-  <script src="/assets/js/share-global.js"></script>
+  <script src="/assets/js/share-global.js" defer crossorigin="anonymous"></script>
+  <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
 </body>
 
 </html>
