--- a/index.html
+++ b/index.html
@@ -280,6 +280,17 @@ CGPA calculation made easy and straightforward for Nigerian students, helping th
    
   </section>
 
+<section class="about-section">
+  <div class="about-illustration">
+    <img src="/assets/images/Messy.svg" alt="Messy">
+  </div>
+  <div class="about-section-description">
+    <h3>Best Online All-In-One Toolbox</h3>
+    <p>10015.io brings all online tools together. If you got tired of bookmarking a single website for each online tool, you are in right place.</p>
+    <p>10015.io has designed as simple as possible to make it easier to focus on functionality of the tool. Main aim of the tools is to perform the operation in minimum steps with a clear UI/UX.</p>
+    <p>Start to use 10015.io and forget all other tools you use forever.</p>
+  </div>
+</section>
 
    <footer>
     <div class="quick-links">
