--- a/other/download-time-calculator.html
+++ b/other/download-time-calculator.html
@@ -398,8 +398,7 @@ Clear all changes
       <h3>Similar Calculators</h3>
       <div class="similar-calculators">
         <a href="/other/upload-time-calculator.html">Upload Time Calculator</a>
-        <a href="#">Crop Yield Calculator</a>
-        <a href="#">Pesticide Calculator</a>
+        <a href="/other/website-bandwidth-calculator.html">Website Bandwidth Calculator</a>
       </div>
     </div>
 <div class="description-txt">
