--- a/index.html
+++ b/index.html
@@ -285,11 +285,11 @@ CGPA calculation made easy and straightforward for Nigerian students, helping th
     <img src="/assets/images/Messy.svg" alt="Messy">
   </div>
   <div class="about-section-description">
-    <h3>Best Online All-In-One Toolbox</h3>
-    <p>10015.io brings all online tools together. If you got tired of bookmarking a single website for each online tool, you are in right place.</p>
-    <p>10015.io has designed as simple as possible to make it easier to focus on functionality of the tool. Main aim of the tools is to perform the operation in minimum steps with a clear UI/UX.</p>
-    <p>Start to use 10015.io and forget all other tools you use forever.</p>
-  </div>
+  <h3>Best Online All-In-One Toolbox</h3>
+  <p>Calclulo brings all the calculators you need into one place. Instead of jumping from one website to another for different calculators, Calclulo makes it simple, fast, and seamless.</p>
+  <p>We designed Calclulo with a clean and intuitive interface, so you can focus on getting accurate results without distractions. Every calculator is built to perform complex operations in just a few clicks, saving you time and effort.</p>
+  <p>Say goodbye to switching between multiple tools. With Calclulo, you have every calculator you need — all in one platform.</p>
+</div>
 </section>
 
    <footer>
