--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ CGPA calculation made easy and straightforward for Nigerian students, helping th
     <img src="/assets/images/Messy.svg" alt="Messy">
   </div>
   <div class="about-section-description">
-  <h3>Best Online All-In-One Calculator</h3>
+  <h3>Best All-In-One Calculator</h3>
   <p>Calclulo brings all the calculators you need into one place. Instead of jumping from one website to another for different calculators, Calclulo makes it simple, fast, and seamless.</p>
   <p>We designed Calclulo with a clean and intuitive interface, so you can focus on getting accurate results without distractions. Every calculator is built to perform complex operations in just a few clicks, saving you time and effort.</p>
   <p>Say goodbye to switching between multiple tools. With Calclulo, you have every calculator you need — all in one platform.</p>
