--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
   <link rel="stylesheet" href="/assets/css/index.css"/>
   <link rel="stylesheet" href="/assets/css/search.css"/>
   <link rel="stylesheet" href="/assets/css/cookie.css"/>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H3XP8T4CYE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H3XP8T4CYE');
+</script>
 </head>
 
 <body>
