--- a/finance/website-ad-revenue-calculator.html
+++ b/finance/website-ad-revenue-calculator.html
@@ -441,6 +441,9 @@ Everyday Life
     <button onclick="resetCalculator()" class="clear-inputs-btn">
 Clear all changes
     </button>
+    <button onclick="InstallPwa()" class="install-pwa-btn">
+  <svg height="18" viewBox="0 -960 960 960" width="18" fill="currentColor"><path d="M280-40q-33 0-56.5-23.5T200-120v-720q0-33 23.5-56.5T280-920h280v200H280v480h400v-80h80v200q0 33-23.5 56.5T680-40H280Zm440-360L520-600l56-56 104 104v-288h80v288l104-104 56 56-200 200Z"></path></svg>
+</button>
     </div>
 
     <div class="similar-calculators-wrap">
