--- a/privacy.html
+++ b/privacy.html
@@ -198,7 +198,7 @@ Everyday Life
   <h2>Contact Us</h2>
   
   <p>
-    If you have any other question, concern or request about this Privacy Policy, your personal information or data protection practices, please <a href="mailto:contact@calclulo.com">contact us</a>. All requests are treated seriously and are subject to a prompt and timely review to ensure that your privacy is respected and your questions answered and your data rights upheld. Your feedback will be critical in Calclulo retaining a secure, easy to navigate and legally compliant platform. You may require clarification on our policies or exercise other data rights, or you may want to report any potential press on your privacy and our team is available to guide and assist within the scope of applicable laws and best practices.
+    If you have any other question, concern or request about this Privacy Policy, your personal information or data protection practices, please <a href="mailto:hello@calclulo.com">contact us</a>. All requests are treated seriously and are subject to a prompt and timely review to ensure that your privacy is respected and your questions answered and your data rights upheld. Your feedback will be critical in Calclulo retaining a secure, easy to navigate and legally compliant platform. You may require clarification on our policies or exercise other data rights, or you may want to report any potential press on your privacy and our team is available to guide and assist within the scope of applicable laws and best practices.
   </p>
 </div>
 
@@ -310,7 +310,7 @@ Everyday Life
   <a href="/about.html">About</a>
   <a href="/terms-of-use.html">Terms of Use</a>
   <a href="/privacy.html">Privacy Policy</a>
-  <a href="mailto:contact@calclulo.com">Contact</a>
+  <a href="mailto:hello@calclulo.com">Contact</a>
 </div>
 
 
