--- a/other/facebook-ads-cost-calculator.html
+++ b/other/facebook-ads-cost-calculator.html
@@ -501,7 +501,7 @@ Everyday Life
   <a href="/about.html">About</a>
   <a href="/terms-of-use.html">Terms of Use</a>
   <a href="/privacy.html">Privacy Policy</a>
-  <a href="mailto:contact@calclulo.com">Contact</a>
+  <a href="mailto:hello@calclulo.com">Contact</a>
 </div>
 
 
