--- a/ecology.html
+++ b/ecology.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Calculate your carbon footprint, emissions, and more using our free ecology tools. Designed for environmental awareness and sustainable action.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/ecology calculators-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
