--- a/everyday-life/fathers-day-countdown.html
+++ b/everyday-life/fathers-day-countdown.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Plan the perfect Father's Day with Calclulo’s live countdown timer. Track the exact time remaining for a heartfelt celebration.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/fathers-day-countdown-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
