--- a/everyday-life/new-year-countdown-calculator.html
+++ b/everyday-life/new-year-countdown-calculator.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Celebrate with Calclulo’s real time New Year Countdown Calculator. Track every second left until the clock strikes twelve.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/new year countdown calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
