--- a/everyday-life/time-calculator.html
+++ b/everyday-life/time-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Quickly calculate total time durations, breaks, or end times using our free Time Calculator. Helpful for planning, scheduling, or tracking time.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/time-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
