--- a/finance/bond-price-calculator.html
+++ b/finance/bond-price-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Get fast and precise bond pricing with our calculator. Calculate clean and dirty prices, coupon payments, accrued interest and more with ease.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/bond-price-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
