--- a/finance/vat-calculator.html
+++ b/finance/vat-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Instant VAT results with total net gross and tax breakdowns. Simple quick and free to use.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/vat-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
