--- a/health/fat-Intake-calculator.html
+++ b/health/fat-Intake-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Figure out your ideal daily fat intake with Calclulo’s free calculator. Designed to support healthy eating and balanced nutrition.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/fat-intake-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
