--- a/health/ovulation-calculator.html
+++ b/health/ovulation-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Enter your last period date and cycle length to get instant ovulation and fertility predictions. No app or login needed.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/ovulation-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
