--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>
   
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/png"/>
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/png"/>
   <title>Calclulo - All in one calculator</title>
   <link rel="manifest" href="/assets/manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
