--- a/other/facebook-ads-cost-calculator.html
+++ b/other/facebook-ads-cost-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Instantly calculate your Facebook Ads CPM with our free calculator. Perfect for marketers and advertisers to optimize campaign performance and ad spend.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/facebook-ads-cost-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
