--- a/other/youtube-cpm-calculator.html
+++ b/other/youtube-cpm-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Instantly find your YouTube CPM with this simple calculator. Enter cost and views to evaluate your ad performance today.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/youtube-cpm-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
