--- a/ecology/bag-footprint-calculator.html
+++ b/ecology/bag-footprint-calculator.html
@@ -34,7 +34,7 @@
 <meta name="twitter:description" content="Calculate your environmental impact based on how often you use plastic or reusable bags. Get yearly waste estimates and sustainability insights with this free Bag Footprint Calculator.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/bag-footprint-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
