--- a/education.html
+++ b/education.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Smart academic tools to help you calculate grades, plan study time, and boost performance. Perfect for students and educators.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/education calculators-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
