--- a/education/cgpa-calculator-nigeria.html
+++ b/education/cgpa-calculator-nigeria.html
@@ -34,7 +34,7 @@
 <meta name="twitter:description" content="Calculate GPA & CGPA with ease. Designed for Nigerian students using the local 5-point grading system. Mobile-friendly and accurate.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/cgpa-calculator-nigeria-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
