--- a/everyday-life/childrens-day-countdown.html
+++ b/everyday-life/childrens-day-countdown.html
@@ -37,7 +37,7 @@
 <meta name="twitter:image" content="https://calclulo.com/assets/images/childrens-day-countdown-thumbnail.png">
 
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 
 <script type="application/ld+json">
