--- a/everyday-life/christmas-countdown.html
+++ b/everyday-life/christmas-countdown.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Get in the holiday spirit with Calclulo’s real time Christmas Countdown Calculator. Track the exact time left until Christmas Day.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/christmas-countdown-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
