--- a/everyday-life/halloween-countdown-calculator.html
+++ b/everyday-life/halloween-countdown-calculator.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Get ready for Halloween with Calclulo’s real-time Halloween Countdown Calculator. Track the exact time left until the spooky night.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/halloween-countdown-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
