--- a/everyday-life/labour-day.html
+++ b/everyday-life/labour-day.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Watch the seconds tick down to Labour Day with Calclulo. Join millions worldwide in honoring workers on May 1 with this accurate, second-by-second countdown.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/labour-day-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
