--- a/everyday-life/world-health-day.html
+++ b/everyday-life/world-health-day.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Track the seconds ticking down to World Health Day on April 7 with Calclulo. Stay aligned with the global movement for health awareness and well-being.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/world-health-day-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
