--- a/finance.html
+++ b/finance.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Use these reliable finance tools to estimate loans, manage budgets, and grow your savings. Trusted by individuals and businesses.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/finance calculators-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
