--- a/finance/apy-calculator.html
+++ b/finance/apy-calculator.html
@@ -39,7 +39,7 @@
 <meta name="twitter:image" content="https://calclulo.com/assets/images/apy-calculator-thumbnail.png">
 
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 
 <script type="application/ld+json">
