--- a/finance/bond-calculator.html
+++ b/finance/bond-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Free Bond Calculator for investors and finance professionals. Easily compute bond price, YTM, coupon interest, and more.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/bond-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
