--- a/finance/nigeria-personal-income-tax-calculator.html
+++ b/finance/nigeria-personal-income-tax-calculator.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Quickly estimate your Nigerian personal income tax with this free calculator. Includes CRA, pension, NHF, NHIS, insurance, rent, and other reliefs.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/nigeria-personal-income-tax-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
