--- a/finance/sales-tax-calculator.html
+++ b/finance/sales-tax-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Free online sales tax calculator to compute tax amount and total price quickly and accurately.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/sales-tax-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
