--- a/finance/website-ad-revenue-calculator.html
+++ b/finance/website-ad-revenue-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Estimate your website or blog revenue using traffic, RPM, and ad impressions. Trusted by marketers, publishers, and online business owners.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/website-ad-revenue-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
