--- a/food/grams-to-cups-converter.html
+++ b/food/grams-to-cups-converter.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Easily convert grams to cups for your recipes. Choose from popular ingredients or enter custom density for exact kitchen results.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/Grams To Cup Converter-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
