--- a/math.html
+++ b/math.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Simple and accurate math calculators for solving equations, percentages, and more. Built for school and everyday needs.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/math calculators-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
