--- a/other/website-bandwidth-calculator.html
+++ b/other/website-bandwidth-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Plan your website’s hosting needs with our bandwidth calculator. Estimate your site’s data usage in just a few clicks.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/website-bandwidth-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
