--- a/other/youtube-watch-time-calculator.html
+++ b/other/youtube-watch-time-calculator.html
@@ -39,7 +39,7 @@
 <meta name="twitter:description" content="Easily calculate your YouTube watch time and monitor your journey toward monetization. Ideal for content creators, YouTubers, and marketers aiming for 4,000 public watch hours.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/youtube-watch-time-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
 
 <script type="application/ld+json">
   {
