--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -13,7 +13,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<link rel="icon" href="/assets/icons/favicon.png" type="image/png"/>
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/png"/>
 
 </head>
 
