--- a/everyday-life.html
+++ b/everyday-life.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Quick, reliable tools to simplify your daily life. From expenses to task planning — everything you need, all in one place.">
 <meta name="twitter:image" content="https://calclulo.com/assets/everyday-life-thumbnail.jpg">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
