--- a/everyday-life/age-calculator.html
+++ b/everyday-life/age-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Find your exact age in seconds. Our free online Age Calculator shows age in years, months, days, hours, minutes, and seconds. Simple, fast, reliable.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/age-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
