--- a/everyday-life/age-difference-calculator.html
+++ b/everyday-life/age-difference-calculator.html
@@ -34,7 +34,7 @@
 <meta name="twitter:description" content="Instantly find the age gap between any two dates of birth. Get results in years, months, days, hours, minutes, and seconds. Simple, fast, and reliable.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/age-difference-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
