--- a/everyday-life/valentines-day-countdown.html
+++ b/everyday-life/valentines-day-countdown.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Get ready for Valentines Day with Calclulo’s real-time Valentines Day Countdown Calculator. Track the exact time left until the day of love.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/valentines-day-countdown-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
