--- a/finance/Interest-rate-calculator.html
+++ b/finance/Interest-rate-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Accurately calculate your loan's interest rate, monthly payments, and total interest paid. Ideal for financial planning and loan comparisons.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/interest-rate-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
