--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>
+  <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon"/>
   
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/png"/>
-  <title>Calclulo - All in one calculator</title>
+  <title>Calclulo - All in one online calculator</title>
+  
   <link rel="manifest" href="/assets/manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
@@ -15,6 +16,7 @@
   <link rel="stylesheet" href="/assets/css/index.css"/>
   <link rel="stylesheet" href="/assets/css/search.css"/>
   <link rel="stylesheet" href="/assets/css/cookie.css"/>
+  
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H3XP8T4CYE"></script>
 <script>
@@ -23,6 +25,86 @@
   gtag('js', new Date());
 
   gtag('config', 'G-H3XP8T4CYE');
+</script>
+
+<meta name="title" content="Calclulo: All In One Online Calculators for Finance Health Agriculture Tech and More">
+<meta name="description" content="Calclulo offers fast accurate and free online calculators and conversion tools for finance math health food agriculture engineering and daily life. Trusted by students professionals and farmers. Find calculators for loan APY conversions CGPA nutrition and more with clear explanations and mobile friendly design.">
+<meta name="keywords" content="online calculators, conversion tools, finance calculator, loan calculator, APY calculator, CGPA calculator, nutrition calculator, agriculture calculator, herbicide calculator, unit converter, bandwidth calculator, download time calculator, grams to cups, currency converter, math tools">
+<meta name="author" content="Calclulo">
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+<link rel="canonical" href="https://calclulo.com/">
+
+<meta property="og:locale" content="en_US">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Calclulo">
+<meta property="og:url" content="https://calclulo.com/">
+<meta property="og:title" content="Calclulo: All In One Online Calculators for Finance Health Agriculture Tech and More">
+<meta property="og:description" content="Access fast reliable calculators for loans APY conversions CGPA nutrition agriculture and more. Free simple tools with clear formulas and export options.">
+<meta property="og:image" content="https://calclulo.com/assets/images/calclulo-home-thumbnail.png">
+<meta property="og:image:alt" content="Calclulo logo and preview of calculators">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@calclulo">
+<meta name="twitter:creator" content="@calclulo">
+<meta name="twitter:url" content="https://calclulo.com/">
+<meta name="twitter:title" content="Calclulo: All In One Online Calculators">
+<meta name="twitter:description" content="Free online calculators and converters for finance health agriculture math and daily life. Mobile friendly and easy to share.">
+<meta name="twitter:image" content="https://calclulo.com/assets/images/calclulo-home-thumbnail.png">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "@id": "https://calclulo.com/#organization",
+      "name": "Calclulo",
+      "url": "https://calclulo.com/",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://calclulo.com/assets/images/calclulo-home-thumbnail.png",
+        "width": 1200,
+        "height": 630
+      },
+      "sameAs": [
+        "https://www.facebook.com/calclulo",
+        "https://twitter.com/calclulo",
+        "https://www.youtube.com/@calclulo"
+      ]
+    },
+    {
+      "@type": "WebSite",
+      "@id": "https://calclulo.com/#website",
+      "url": "https://calclulo.com/",
+      "name": "Calclulo",
+      "publisher": {
+        "@id": "https://calclulo.com/#organization"
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://calclulo.com/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    },
+    {
+      "@type": "WebPage",
+      "@id": "https://calclulo.com/#homepage",
+      "url": "https://calclulo.com/",
+      "name": "Calclulo Home",
+      "description": "Calclulo provides free reliable calculators and conversion tools across finance health agriculture math and more. Use the search or browse categories to find the tool you need.",
+      "inLanguage": "en",
+      "isPartOf": {
+        "@id": "https://calclulo.com/#website"
+      },
+      "publisher": {
+        "@id": "https://calclulo.com/#organization"
+      }
+    }
+  ]
+}
 </script>
 </head>
 
@@ -33,9 +115,6 @@
     <img src="/assets/images/Calclulo Logo.svg" alt="Logo" /></a>
 
 </header>
-
-
-
 
   <section class="sec-one">
     
