--- a/other/edpi-calculator.html
+++ b/other/edpi-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Find your true eDPI with Calclulo's free calculator. Trusted by gamers for fine-tuning mouse settings and boosting accuracy in Valorant, CS:GO, Fortnite, and more.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/edpi-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
