--- a/other/tiktok-diamonds-calculator.html
+++ b/other/tiktok-diamonds-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Convert TikTok diamonds to real money instantly. Get clear breakdowns of TikTok share vs creator earnings. Designed for content creators and live streamers.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/tiktok-diamonds-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
