--- a/statistics.html
+++ b/statistics.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Smart and accurate statistics calculators for analyzing data. Great for students, teachers, and professionals working with numbers.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/statistics calculators-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
