--- a/agriculture.html
+++ b/agriculture.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Quick, reliable tools for seed rate, pesticide use, crop yield, and more. Empowering farmers and researchers with accurate calculations.">
 <meta name="twitter:image" content="https://calclulo.com/assets/agriculture-thumbnail.jpg">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/png"/>
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon"/>
 
 <script type="application/ld+json">
   {
