--- a/agriculture/herbicide-calculator.html
+++ b/agriculture/herbicide-calculator.html
@@ -33,7 +33,7 @@
 <meta name="twitter:description" content="Determine accurate herbicide dosages with IITA's free calculator. Trusted by farmers, agronomists, and researchers for effective and responsible weed management.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/herbicide-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
