--- a/agriculture/seed-rate-calculator.html
+++ b/agriculture/seed-rate-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Quickly calculate accurate seed rates for your farm or field with this free tool. Perfect for growers, agronomists, and agricultural professionals aiming for optimal plant populations.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/seed-rate-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
