--- a/everyday-life/easter-countdown.html
+++ b/everyday-life/easter-countdown.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Get ready for Easter with Calclulo’s real-time Easter Countdown Calculator. Track the exact time left until Easter Sunday.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/easter-countdown-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
