--- a/everyday-life/world-environment-day.html
+++ b/everyday-life/world-environment-day.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Calclulo helps you track the time until World Environment Day on June 5. Stay connected with a global movement focused on protecting our planet, ecosystems, and future.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/world-environment-day-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
