--- a/finance/custom-duty-calculator-for-vehicles-nigeria.html
+++ b/finance/custom-duty-calculator-for-vehicles-nigeria.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Estimate accurate car import charges for Nigeria, including duty, VAT, and levies. Free vehicle duty calculator for buyers, dealers, and auto importers.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/custom-duty-calculator-for-vehicles-nigeria-thumbnail">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
