--- a/finance/roi-calculator.html
+++ b/finance/roi-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Quickly calculate ROI and evaluate your investment results. Ideal for business owners, investors, and marketers. No signup required.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/roi-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
