--- a/food.html
+++ b/food.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="From calories to macronutrients, use these calculators to eat smarter and cook better. Great for health, fitness, and meal prep.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/food calculators-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
