--- a/food/coffee-calculator.html
+++ b/food/coffee-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Stay within safe caffeine limits. Use this calculator to determine your daily caffeine allowance based on weight and sensitivity. Includes drink comparisons.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/coffee-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
