--- a/health.html
+++ b/health.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Quick, helpful tools to track your health. Calculate BMI, calories, ideal weight, and more — perfect for fitness and nutrition planning.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/health-calculators-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
