--- a/health/gfr-calculator.html
+++ b/health/gfr-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="This GFR Calculator helps you understand kidney function using CKD EPI, MDRD, and Mayo formulas. Accurate results for adults based on age, sex, and creatinine level.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/gfr-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
