--- a/math/percentage-calculator.html
+++ b/math/percentage-calculator.html
@@ -39,7 +39,7 @@
 <meta name="twitter:image" content="https://calclulo.com/assets/images/percentage-calculator-thumbnail.png">
 
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 
 <script type="application/ld+json">
