--- a/other/ctr-calculator.html
+++ b/other/ctr-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Instantly find your CTR with this simple calculator. Enter impressions and clicks to evaluate your ad performance today.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/ctr-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
