--- a/other/download-time-calculator.html
+++ b/other/download-time-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Plan your downloads with confidence. Calculate how long your files will take to download based on your speed and file size. Supports all units including MB, GB, KiB, MiB, Mbps, Kibps.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/download-time-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
