--- a/other/risk-calculator.html
+++ b/other/risk-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Instantly compare two options based on probability and potential loss. Ideal for finance, project management, or everyday decisions.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/risk-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
