--- a/other/tiktok-money-calculator.html
+++ b/other/tiktok-money-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Free Tiktok revenue calculator to estimate daily, monthly, and yearly ad income based on views and CPM. Ideal for creators and marketers.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/tiktok-money-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
