--- a/other/whop-revenue-calculator.html
+++ b/other/whop-revenue-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Free Whop revenue calculator to estimate daily, monthly, and yearly ad income based on views and CPM.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/whop-revenue-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
