--- a/sports.html
+++ b/sports.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Calculate pace, heart rate, calories, and more with these accurate fitness tools. Built for training, performance, and recovery.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/sports calculators-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
