--- a/statistics/coin-flipper.html
+++ b/statistics/coin-flipper.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Flip a coin instantly online. Free, simple, and accurate coin toss tool for quick decisions, games, or fun.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/coin-flipper-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/svg+xml">
+<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
 <script type="application/ld+json">
   {
