--- a/education/cgpa-calculator-nigeria.html
+++ b/education/cgpa-calculator-nigeria.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>
 
-<title>CGPA Calculator</title>
+<title>CGPA Calculator for Nigerian Students</title>
 <link rel="manifest" href="/assets/manifest.json">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
@@ -16,7 +16,7 @@
 
 
 <meta name="title" content="CGPA Calculator Nigeria | Free GPA & CGPA Tool for Nigerian Students">
-<meta name="description" content="Accurate CGPA Calculator for Nigerian universities. Calculate GPA and CGPA across multiple semesters. Simple, fast, and 100% free to use. Supports local grading system.">
+<meta name="description" content="CGPA Calculator for Nigerian universities. Instantly calculate GPA and CGPA across semesters using local grading scales. Fast accurate and free to use.">
 <meta name="keywords" content="CGPA calculator Nigeria, GPA calculator Nigeria, Nigerian university CGPA, UNILAG CGPA calculator, UNN GPA, calculate CGPA Nigeria, GPA to CGPA conversion, Nigerian grading system">
 <meta name="author" content="Calclulo">
 <meta name="robots" content="index, follow">
