--- a/404.html
+++ b/404.html
@@ -8,6 +8,10 @@
 <title>404 - Page Not Found</title>
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 <link rel="stylesheet" href="/assets/css/search.css" />
+
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 </head>
 
 <body id="four-o-four-body">
