--- a/agriculture/herbicide-calculator.html
+++ b/agriculture/herbicide-calculator.html
@@ -33,7 +33,9 @@
 <meta name="twitter:description" content="Determine accurate herbicide dosages with IITA's free calculator. Trusted by farmers, agronomists, and researchers for effective and responsible weed management.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/herbicide-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
