--- a/physics.html
+++ b/physics.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Reliable and easy-to-use unit converters — from meters to feet, Celsius to Fahrenheit, MB to GB, and beyond. Trusted by students, professionals, and curious minds.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/Physics calculators-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
