--- a/ecology/bag-footprint-calculator.html
+++ b/ecology/bag-footprint-calculator.html
@@ -34,7 +34,7 @@
 <meta name="twitter:description" content="Calculate your environmental impact based on how often you use plastic or reusable bags. Get yearly waste estimates and sustainability insights with this free Bag Footprint Calculator.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/bag-footprint-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
