--- a/everyday-life/age-difference-calculator.html
+++ b/everyday-life/age-difference-calculator.html
@@ -34,7 +34,7 @@
 <meta name="twitter:description" content="Instantly find the age gap between any two dates of birth. Get results in years, months, days, hours, minutes, and seconds. Simple, fast, and reliable.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/age-difference-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
