--- a/everyday-life/christmas-countdown.html
+++ b/everyday-life/christmas-countdown.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Get in the holiday spirit with Calclulo’s real time Christmas Countdown Calculator. Track the exact time left until Christmas Day.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/christmas-countdown-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
