--- a/everyday-life/earth-day-countdown.html
+++ b/everyday-life/earth-day-countdown.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="See exactly how much time is left until Earth Day with Calclulo’s real time countdown. Every second brings us closer to a greener tomorrow.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/earth day countdown-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
