--- a/everyday-life/labour-day.html
+++ b/everyday-life/labour-day.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Watch the seconds tick down to Labour Day with Calclulo. Join millions worldwide in honoring workers on May 1 with this accurate, second-by-second countdown.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/labour-day-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
