--- a/everyday-life/mothers-day-countdown.html
+++ b/everyday-life/mothers-day-countdown.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Plan the perfect Mother's Day with Calclulo’s live countdown timer. Track the exact time remaining for a heartfelt celebration.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/mothers-day-countdown-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
