--- a/everyday-life/new-year-countdown-calculator.html
+++ b/everyday-life/new-year-countdown-calculator.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Celebrate with Calclulo’s real time New Year Countdown Calculator. Track every second left until the clock strikes twelve.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/new year countdown calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
