--- a/everyday-life/valentines-day-countdown.html
+++ b/everyday-life/valentines-day-countdown.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Get ready for Valentines Day with Calclulo’s real-time Valentines Day Countdown Calculator. Track the exact time left until the day of love.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/valentines-day-countdown-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
