--- a/finance/Interest-rate-calculator.html
+++ b/finance/Interest-rate-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Accurately calculate your loan's interest rate, monthly payments, and total interest paid. Ideal for financial planning and loan comparisons.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/interest-rate-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
