--- a/finance/bond-price-calculator.html
+++ b/finance/bond-price-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Get fast and precise bond pricing with our calculator. Calculate clean and dirty prices, coupon payments, accrued interest and more with ease.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/bond-price-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
