--- a/finance/nigeria-personal-income-tax-calculator.html
+++ b/finance/nigeria-personal-income-tax-calculator.html
@@ -36,7 +36,7 @@
 <meta name="twitter:description" content="Quickly estimate your Nigerian personal income tax with this free calculator. Includes CRA, pension, NHF, NHIS, insurance, rent, and other reliefs.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/nigeria-personal-income-tax-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
