--- a/finance/vat-calculator.html
+++ b/finance/vat-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Instant VAT results with total net gross and tax breakdowns. Simple quick and free to use.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/vat-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
