--- a/health.html
+++ b/health.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Quick, helpful tools to track your health. Calculate BMI, calories, ideal weight, and more — perfect for fitness and nutrition planning.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/health-calculators-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
