--- a/health/ovulation-calculator.html
+++ b/health/ovulation-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Enter your last period date and cycle length to get instant ovulation and fertility predictions. No app or login needed.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/ovulation-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
