--- a/math/foil-calculator.html
+++ b/math/foil-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Multiply and expand two binomials using the FOIL method. Ideal for students and teachers. Instant breakdown of First Outer Inner Last terms and total result.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/foil-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
