--- a/math/mean-calculator.html
+++ b/math/mean-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Instantly calculate the arithmetic, geometric, or harmonic mean of your data with our easy-to-use calculator. Perfect for math and statistics.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/mean-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
