--- a/other/ctr-calculator.html
+++ b/other/ctr-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Instantly find your CTR with this simple calculator. Enter impressions and clicks to evaluate your ad performance today.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/ctr-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
