--- a/other/facebook-ads-cost-calculator.html
+++ b/other/facebook-ads-cost-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Instantly calculate your Facebook Ads CPM with our free calculator. Perfect for marketers and advertisers to optimize campaign performance and ad spend.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/facebook-ads-cost-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
