--- a/other/risk-calculator.html
+++ b/other/risk-calculator.html
@@ -35,7 +35,7 @@
 <meta name="twitter:description" content="Instantly compare two options based on probability and potential loss. Ideal for finance, project management, or everyday decisions.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/risk-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
