--- a/other/youtube-ad-revenue-calculator.html
+++ b/other/youtube-ad-revenue-calculator.html
@@ -37,7 +37,7 @@
 <meta name="twitter:description" content="Free YouTube revenue calculator to estimate daily, monthly, and yearly ad income based on views and CPM. Ideal for creators and marketers.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/youtube-ad-revenue-calculator-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
