--- a/statistics/coin-flipper.html
+++ b/statistics/coin-flipper.html
@@ -36,7 +36,8 @@
 <meta name="twitter:description" content="Flip a coin instantly online. Free, simple, and accurate coin toss tool for quick decisions, games, or fun.">
 <meta name="twitter:image" content="https://calclulo.com/assets/images/coin-flipper-thumbnail.png">
 
-<link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
